# LLMsForAnalysts

./: README.md  requirements.txt  requirements_freeze.txt
Ch04/: crime_test_data.csv
Ch05/: ImagePrompt.txt
Ch06/: crime_mcp.py  prep_dallas_crime.py  testfile1.txt  testfile2.txt  testfile3.txt
Ch07/: .env.example  Prompts.txt  README.md  crime-analyst.md  pyproject.toml  server.py
Ch07/incident_app/: GEMINI.md  README.md  app.py  database.py  incidents.db  requirements.txt  run_app.sh
Ch07/incident_app/templates/: base.html  incident.html  input.html  macros.html  search.html
