[project]
name = "gemimg-mcp-server"
version = "0.1.0"
description = "MCP server for generating images using Google's Gemini API via gemimg"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "gemimg>=0.1.0",
    "mcp>=1.0.0",
]
requires-python = ">=3.10"

[project.scripts]
gemimg-mcp-server = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
